--- a/index.html
+++ b/index.html
@@ -3,6 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ваша Сторінка</title>
+    <title>Резюме</title>
 </head>
 <body>
+<h1>&nbsp;&nbsp;&nbsp;&nbsp;Резюме</h1>
+<hr>
+<dl>
+<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Особиста Інформація</h2>
+<dd><b>Ім'я:</b>&nbsp;&nbsp;<i>Кожемяко Андрій</i></dd>&nbsp;
+<dd><b>Адреса:</b>&nbsp;&nbsp;вул. Паланочна 6/53, 51200, Дніпро</dd>&nbsp;
+<dd><b>Номер телефона:</b>&nbsp;&nbsp;<em>+380636024978</em></dd>&nbsp;
+<dd><b>Email:<a href="#"></b>&nbsp;<u>kasik9436@gmail.com</u></a></dd>&nbsp;
+</dl>
+<hr>
+<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Особисті Якості</h2>
+<ul type="square">
+    <li>Ставлення до колег:</li>
+    <ol>
+        <li><i>Самоконтроль;</i></li>
+        <li><i>Чесність;</i></li>
+        <li><i>Почуття гумору.</i></li>
+    </ol>&nbsp;
+    <li> Відношення до себе: </li>
+    <ol type="a">
+        <li><i>Cамокритичність;</i></li>
+        <li><i>Незалежність.</i></li>
+    </ol>&nbsp;
+    <li> Ставлення до роботи: </li>
+    <ol type="I">
+        <li><i>Виконавчість;</i></li>
+        <li><i>Пунктуальність.</i></li>
+    </ol>
+</ul>
+<hr>
+<dl>
+<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Досвід Роботи</h2>
+    <dd><b>Асистент вет. лікаря</b>&nbsp;&nbsp;&nbsp;&nbsp;<i>09.2020 - 05.2021</i></dd>
+    <dd><i>&nbsp;"VetClinic", Дніпро</i></dd>
+<ul>
+<blockquote>
+<li><code>Контроль за проведенням власниками тварин обов'язкових<br>
+лікувально-профілактичних заходів у строки,
+визначені інструкціями,<br> настановами, рекомендаціями щодо
+утримання тварин.</code></li>
+</blockquote>
+<blockquote>
+<li><code>Консультації з питань лікування та відтворення тварин, відповідного<br> утримання
+    та годування тварин відповідно до зоогігієнічних вимог.</code></li>
+</blockquote>
+</ul>
+    <dd><b>Служба підтримки</b> <u>BOLT (Ride Hailing)</u>&nbsp;&nbsp;&nbsp;&nbsp;<i>10.2023 - 07.2024</i></dd>
+    <dd><i>&nbsp;ТОВ «СІМПЛІ КОНТАКТ», Дніпро</i></dd>
+    <ul>
+<blockquote>
+<li><code>Надання високоякісної підтримки клієнтам
+    за допомогою телефонних<br> дзвінків, електронної пошти та чату.</code></li>
+</blockquote>
+<blockquote>
+<li><code>Розв'язання технічних проблем клієнтів та направлення
+    нерозв'язаних<br> питань до відповідних відділів.</code></li>
+</blockquote>
+</dl>
+<hr>
+<dl>
+    <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Освіта</h2>
+    <dd><b>Молодший спеціаліст ветеринарної медицини</b>&nbsp;&nbsp;&nbsp;&nbsp;<cite>09.2017 - 06.2021</cite></dd>
+    <dd>&nbsp<a href="#"><abbr title="whatever">Новомосковський коледж</a>,<strong> Новомосковськ</strong></abbr></dd>
+</dl>
+<dl>
+    <dd><b>Магістр ветеринарної медицини</b>&nbsp;&nbsp;&nbsp;&nbsp;<cite>09.2021 - 06.2026</cite></dd>
+    <dd>&nbsp;<u><a href="#">Харківська державна зооветеринарна академія</a></u>,<strong> Харків</strong></dd>
+</dl>
+<hr>
+</body>
